# neurosymbolic-rag-maritime

./: .gitignore  README.md  Rapport_De_PFE.docx
articles_et_présentations/: chasse_a_la_baleine.xlsx  rejet_dhydrocarbures.xlsx
fichiers/: Notebook 3 — gemma-4-E4B-it.ipynb  all_definitions_gemma.json  all_llamaParser.json
neurosymbolic_rag/: .gitignore  analyze_batch_results.py  article_latell2026.tex  audit.py  batch_query_system.py  batch_test.py  benchmark_queries.py  docker-compose.yml  evaluate_ragas.py  export_batch_results.py  generate_presentation.py  generate_ragas_data.py  launcher_audit.py  scratch_check_owl.py  setup_audit.py  test_ablation.py  test_ablation_article.py  test_ablation_ontologie.py  (+1 more)
version_1_Ontologie/: .env.local.example  AMELIORATIONS_ARTICLE.md  BATCH_AUDIT_SUMMARY.md  BATCH_QUERY_GUIDE.md  CHANGELOG.md  COMPLETION.md  COMPLETION_SUMMARY.md  GUIDE_COMPILATION_LATELL.md  INDEX.md  QUICK_START_ARTICLE.md  QUICK_START_BATCH_QUERY.md  README.md  README_ARTICLE_LATELL2026.md  README_BATCH_QUERY_SYSTEM.md  SPEECH_PRESENTATION.md  START.md  START_AUDIT.bat  abox_graphe.md  benchmark_analysis.md  chapitre4.js  chapitre4.md  chapitre5.md  chasse_a_la_baleine.xlsx  main.py  maritime-rag.bib  ontology_audit.md  plan_dedoublonnage_agressif.md  plan_memoire.md  prompt_amélioré.docx  pyproject.toml  pytest.ini  requirements.txt  run_benchmark.py  scratch_test_synonyms.py  setup_v3.py  tbox_ontologie.md
version_1_Ontologie/batch_audit_system/: README.md  STRUCTURE.md
version_1_Ontologie/batch_audit_system/docs/: 00_START_HERE.md
version_1_Ontologie/batch_audit_system/examples/: commands.sh  examples.md
version_1_Ontologie/batch_audit_system/scripts/: launcher_audit.py
version_1_Ontologie/data/config/: settings.yaml
version_1_Ontologie/docs/: ARCHITECTURE.md  ARCHITECTURE_V3.md  GUIDE_PRESENTATION.md  INDEX.md  INSTALLATION.md  LIVRABLE_FINAL.md  MIGRATION_GUIDE_V2_V3.md  ONTOLOGY_USAGE_GUIDE.md  PIPELINE_DETAILED.md  PIPELINE_SPEECH.md  PRESENTATION_INTERACTIVE.html  PRESENTATION_SPEECH.md  PROJECT_SUMMARY.md  QUICK_START.md  RAG_ARCHITECTURE_V2.md  RAPPORT_COMPLET_ONTOLOGIE_RAG.md  REFACTOR_COMPLETE_SUMMARY.md  REFACTOR_SUMMARY.md  RESUME_EXECUTIF.md  maritime_ontology_graph.html  ontology_stats.json
version_1_Ontologie/ontologie/: __init__.py  entity_resolution.py  loader.py  ontology_cleaner.py  visualize_ontology.py
version_1_Ontologie/rag/: check_environment.py  config.py  test_extraction.py
version_1_Ontologie/rag/core/: __init__.py  fusion.py
version_1_Ontologie/rag/ingestion/: embeddings_pipeline.py
version_1_Ontologie/rag/integration/: __init__.py  neo4j_bridge_safe.py
version_1_Ontologie/scripts/: check_neo4j.py  test_rag_robustness.py
version_1_Ontologie/tests/: test_rag_integration.py  test_rag_robustness.py  test_rag_unit.py
(+118 files in other folders)
